--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nextui-org/button": "^2.0.38",
     "@nextui-org/react": "^2.4.8",
     "@vercel/postgres": "^0.10.0",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "flowbite-react": "^0.10.2",
@@ -27,6 +28,7 @@
     "react-icons": "^5.3.0",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.26.2",
+    "styled-components": "^6.1.13",
     "vercel": "^37.7.0",
     "zod": "^3.23.8"
   },
