--- a/app/.env
+++ b/app/.env
@@ -1,6 +1,8 @@
 AUTH_SECRET=ynNUS416qtbfG2Ge0D7lumT//01fgX2pPX7gGXKaIeo=
 APPNAME="Godown"
 
+NEXT_PUBLIC_SECRET=ynNUS416qtbfG2Ge0D7lumT
+
 POSTGRES_URL="postgres://default:RwhP2m3LypQV@ep-green-cloud-a1op61hr-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
 POSTGRES_PRISMA_URL="postgres://default:RwhP2m3LypQV@ep-green-cloud-a1op61hr-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
 POSTGRES_URL_NO_SSL="postgres://default:RwhP2m3LypQV@ep-green-cloud-a1op61hr-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb"
