--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "flowbite-react": "^0.10.2",
+    "lambda": "^0.10.3",
     "next": "14.2.15",
     "next-auth": "^5.0.0-beta.22",
     "react": "^18",
